--- a/content/supplement/ordinals/rune.mdx
+++ b/content/supplement/ordinals/rune.mdx
@@ -7,7 +7,7 @@ draft: true
 
 ## 数据编码
 
-`OP_RETURN` 中的数据以 **Key-Value** 的形式依次拼接存储, `Key` 的值定义在 `Tag` 枚举中:
+`OP_RETURN` 中的数据以 **Key-Value** 的形式拼接存储, `Key` 的值定义在 `Tag` 枚举中:
 
 ```rust
 pub(super) enum Tag {
@@ -54,17 +54,17 @@ pub(super) enum Tag {
 
 最终拼接结果是 `0126 0203 03c040`。
 
-:::note 为什么要 LEB128 编码
-
-如果不进行 `LEB128` 编码, 直接拼接 `Key` 和 `Value`。为了正确读取并解析数据, 必然还需要存储每个 `Key` 对应 `Value` 数组的长度以及每个元素之间的分隔符。这样会增加数据的存储空间, 而 `OP_RETURN` 的存储空间是有限的。使用 `LEB128` 编码后, 可以有效减少数据的存储空间。
-
-缺点是数组中有多个元素时, 需要数组每个元素都需要有 `Key` 拼接, 需要占用额外的存储空间。
-
-:::
-
 :::tip LEB128
 
 LEB128 编码, 即 `Little Endian Base 128` 编码, 是一种变长编码方式。在 LEB128 编码中, 每个字节的最高位用于标识是否为最后一个字节, 如果最高位为 1, 则表示后面还有字节, 否则表示当前字节为最后一个字节。每个字节的其余 7 位用于存储数据。
+
+:::
+
+:::warning 为什么要 LEB128 编码
+
+如果不进行 `LEB128` 编码, 直接拼接 `Key` 和 `Value`。为了正确读取并解析数据, 必然还需要存储每个 `Key` 对应 `Value` 数组的长度以及每个元素之间的分隔符。这样会增加数据的存储空间, 而 `OP_RETURN` 的存储空间是有限的。使用 `LEB128` 编码后, 可以有效减少数据的存储空间。
+
+缺点是数组中有多个元素时, 数组中的每个元素都需要有 `Key` 拼接, 需要占用额外的存储空间。
 
 :::
 
@@ -137,7 +137,7 @@ pub(super) enum Flag {
 
 ## 铸造
 
-铸造符文, 则只需要设置 `Tag` 枚举中的 `Mint` 成员, 值结构为:
+铸造符文, 则只需要设置 `Tag` 枚举中的 `Mint` 成员, 值为符文ID, 其结构为:
 
 ```rust
 pub struct RuneId {
@@ -149,7 +149,16 @@ pub struct RuneId {
 - `block` - 部署符文所在的区块高度
 - `tx` - 部署符文所在的区块的交易序号
 
-例如在 860000 区块高度部署了符文, 区块内的交易列表序号在 100, 则铸造符文时, 需要构建的 `Key-Value` 数据为:
+例如: 符文交易在 860000 区块高度被打包在区块中, 且在区块内的交易序号是 100, 则符文ID为
+
+```json
+{
+  "block": 860000,
+  "tx": 100
+}
+```
+
+铸造符文时, 需要构建的 `Key-Value` 数据为:
 
 ```ts
 20: [860000, 100]
@@ -180,7 +189,7 @@ pub struct Edict {
 - `amount` - 转账金额
 - `output` - 接收符文的输出索引
 
-由于是数组结构, 所以可以在一笔交易中可以包含多种符文的转账。并且 `Body` 数据一定是 `OP_RETURN` 最后一段数据。
+由于是数组结构, 所以可以在一笔交易中可以包含多种符文的转账。并且 `Body` 数据是 `OP_RETURN` 最后一段数据。
 
 `Tag` 枚举中的 `Body` 成员值为 0, 因此以 `00` 开头。并且由于是最后一段数据, 所以 `00` 不需要依次与数组中的每个元素拼接。只需要依次拼接数组中每个元素的 `LEB128` 编码后的数据即可。
 
@@ -283,7 +292,7 @@ OP_PUSHBYTES_32 InternalPubKey
 OP_CHECKSIG
 OP_0
 OP_IF
-  <LE(Base26(RuneName))> // 不含分隔符的符文名称 Base26 编码16进制格式小端序
+  <LE(Base26(RuneName))> // 不含分隔符的符文名称 Base26 编码后的小端序16进制格式
 OP_ENDIF
 ```
 
@@ -326,26 +335,26 @@ OP_ENDIF
 
 ```json
 {
-  "22": [2], // Pointer
+  "2": [3], // Flags
+  "4": [467309141365942], // Rune Name
   "3": [64], // Spacers
   "5": [128049], // Symbol
-  "10": [21000000], // Amount
   "6": [69420000000], // Premine
+  "10": [21000000], // Amount
   "8": [69420], // Cap
-  "4": [467309141365942], // Rune
-  "2": [3] // Flags
+  "22": [2] // Pointer
 }
 ```
 
 ### 铸造
 
-铸造符文时由于不需要在 `Witness` 中存放数据, 所以不再需要 `Taproot` 地址。而改用相对较省 Gas 的 `P2WPKH` 地址
+铸造符文时由于不需要在 `Witness` 中存放数据, 通常 `Commit` 交易不再需要 `Taproot` 地址。而改用相对简单的 `P2WPKH` 地址, 当然也可以继续使用 `Taproot` 地址。
 
 随机生成临时的 `P2WPKH` 地址, 用于接收 `Commit` 交易的 `UTXO`。之后花费此 `UTXO` 并输出包含铸造符文信息的 `OP_RETURN` 类型的 `UTXO`。
 
 `OP_RETURN` 数据中只需要包含以 `Mint` 为 `Key`, 部署符文所在的区块和交易序号为 `Value` 的数据即可。
 
-例如: 铸造符文 [CHATGPT•CATS](https://unisat.io/runes/detail/CHATGPT%E2%80%A2CATS), 其 RuneId 为
+例如: 铸造符文 [CHATGPT•CATS](https://unisat.io/runes/detail/CHATGPT%E2%80%A2CATS), 其 `RuneId` 为
 
 ```ts
 {
@@ -356,7 +365,7 @@ OP_ENDIF
 
 用户地址 `bc1pt0ld200lnevf97mmscfkp0l96pkj3hurxcxr93q8lc80tz0m2pdqxz4htr` 首先发送一笔 [Commit](https://mempool.space/tx/c875d469db70e1d5db5620f37c38c4f31208fca672ccaa01fc1e65efe4541524) 交易到临时生成的 `P2WPKH` 地址
 
-之后花费发送给 `P2WPKH` 地址的 `UTXO` 并输出包含铸造符文信息的 `OP_RETURN` 类型的 `UTXO`。`OP_RETURN` 数据为
+之后发送 [Reveal](38abbca8c6e470ed2373b0f0c14925e262545e2d6ac2a17d1811153183a43a06) 交易用来花费发送给 `P2WPKH` 地址的 `UTXO` 并输出包含铸造符文信息的 `OP_RETURN` 类型的 `UTXO`。`OP_RETURN` 数据为
 
 ```text
 6a5d 07 14c7c935 149e15
@@ -370,3 +379,50 @@ OP_ENDIF
 - 9e15 - 2718 的 `LEB128` 编码结果
 
 <LEB128Encoder initValue={877767n} />
+
+### 转账
+
+由于转账不再有抢跑等问题, 所以不再需要发送两笔交易。只需要以绑定符文的 `UTXO` 作为输入, 并输出包含转账数据的 `OP_RETURN` 类型的 `UTXO`
+
+`OP_RETURN` 数据结构如下:
+
+```text
+6a5d <len> 00 <RuneId> <Amount> <Output>
+```
+
+```rust
+pub struct Edict {
+  pub id: RuneId,
+  pub amount: u128,
+  pub output: u32,
+}
+```
+
+同样以 [CHATGPT•CATS](https://unisat.io/runes/detail/CHATGPT%E2%80%A2CATS) 符文为例
+
+其中有一笔 [转账交易](https://ordiscan.com/tx/5973267bdab40942f10a16665a912471df27f13b93eb23630cd9fc78151a0e30) 中, 包含两个 `UTXO` 输入 和 三个 `UTXO` 输出
+
+- 第 0 个 `UTXO` 输入绑定了 504M 数量的符文
+- 第 0 个 `UTXO` 输出绑定了 84M 数量的符文
+- 第 1 个 `UTXO` 输出绑定了 420M 数量的符文。
+
+`OP_RETURN` 数据为:
+
+```text
+6a5d 0c 00 c7c935 9e15 80e2a2c801 01
+```
+
+- 6a5d - 表示 `OP_RETURN OP_13`
+- 0c - 表示后续数据的字节长度
+- 00 - 表示Tag 枚举中 `Body` 的值
+- c7c935 - 符文 ID 中 区块高度 877767 的 `LEB128` 编码结果
+- 9e15 - 符文 ID 中 区块内交易索引 2718 的 `LEB128` 编码结果
+- 80e2a2c801 - 420M `LEB128` 编码结果, 需注意的是符文部署的精度值 `divisibility` 字段, 实际转账数量需要乘以该字段值, 由于示例符文的精度值为 0, 可忽略。
+- 01 - 接收 420M 符文输出索引
+
+因此该笔交易的作用就是将 504M 数量的符文转出 420M 给别人, 剩下 84M 找零给自己。
+
+## 参考
+
+- [ord](https://github.com/ordinals/ord)
+- [js-wallet-sdk](https://github.com/okx/js-wallet-sdk)
