feat: update text

--- a/content/supplement/ordinals/basic.mdx
+++ b/content/supplement/ordinals/basic.mdx
@@ -138,5 +138,5 @@ Ordinals 协议最初由 [Casey](https://x.com/rodarmor) 在 2022 年提出, 是
 
 铭刻数据的方式有很多, 例如:
 
-- [BRC-20](/supplement/ordinals/brc20)
-- [Rune](/supplement/ordinals/rune)
+- [Inscription](/supplement/ordinals/brc20)
+- [Runes](/supplement/ordinals/runes)
