feat: lightning add reference

--- a/content/supplement/lightning.mdx
+++ b/content/supplement/lightning.mdx
@@ -3,3 +3,8 @@ title: '闪电网络'
 ---
 
 TODO
+
+## 参考资料
+
+- [闪电网络白皮书](https://github.com/lightningnetwork/paper)
+- [Bolt 规范](https://github.com/lightning/bolts)
